invoice and payment changes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1231,7 +1231,7 @@
                             </div>
                             <div class="col-md-3">
                                 <label for="liveDate">
-                                    Transaction Date
+                                    Tentative Start Date
                                 </label>
                                 <i class="icon-fs-info ng-scope"
                                     ngbTooltip="Payment will be deducted on this date every month/year"
@@ -1242,7 +1242,7 @@
                                     *ngIf="thirdStepSubmitted && thirdFormGroup.controls['GoLiveDate'].errors"
                                     class="invalid-feedback">
                                     <div *ngIf="thirdFormGroup.controls['GoLiveDate'].errors['required']">
-                                        Transaction Date is required
+                                        Tentative Start Date is required
                                     </div>
                                 </div>
                             </div>
