--- a/src/app/components/group-list/group-list.component.html
+++ b/src/app/components/group-list/group-list.component.html
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="message-text" class="col-form-label">SMS Outgoing number:</label>
+                                <label for="message-text" class="col-form-label">SMS Outgoing Number:</label>
                                 <input type="text" class="form-control" id="message-text" autocomplete="off"
                                     (keypress)="numberOnly($event)" formControlName="SMSPhoneNumber"
                                     [ngClass]="{ 'is-invalid': submitted && firstFormGroup.controls['SMSPhoneNumber'].errors }"
@@ -106,7 +106,7 @@
                                 <div *ngIf="submitted && firstFormGroup.controls['SMSPhoneNumber'].errors"
                                     class="invalid-feedback">
                                     <div *ngIf="firstFormGroup.controls['SMSPhoneNumber'].errors['required']">
-                                        SMS Outgoing number is required
+                                        SMS Outgoing Number is required
                                     </div>
                                 </div>
                             </div>
